# cryptojack

./: .env-sample  .gitignore  Cargo.toml  LICENSE  README.md  games.db
src/: accounts.rs  bot.rs  db.rs  games.rs  main.rs
src/games/: blackjack.rs  mod.rs
