[package]
name = "cryptojack"
version = "0.1.0"
authors = ["Chris Bruce"]
edition = "2018"

[dependencies]
dotenv = "0.13.0"
rand = "0.6.0"
regex = "1"
slack = "0.22.0"
separator = "0.3.1"
helium = { git = "https://github.com/chrisabruce/helium-rs" }

[dependencies.rusqlite]
version = "0.15.0"
features = ["bundled"]